fix: Update collapse rotate logic (#192)

--- a/packages/react/ds-app-launchpad/src/ui/GitDiffViewer/common/FileHeader/styles.css
+++ b/packages/react/ds-app-launchpad/src/ui/GitDiffViewer/common/FileHeader/styles.css
@@ -34,6 +34,8 @@
       display: flex;
       align-items: center;
       border-radius: 1px;
+      transition: transform 0.15s ease-out;
+      transform: rotate(90deg);
 
       &:hover {
         background-color: var(--git-diff-file-header-button-hover-background);
@@ -43,7 +45,7 @@
       }
 
       &.collapsed {
-        transform: rotate(90deg);
+        transform: rotate(0deg);
       }
     }
   }
